--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.2.5",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
